--- a/expired.html
+++ b/expired.html
@@ -6,54 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <title>Afrihost | Survey</title>
+    <title>Cue Consulting</title>
 </head>
 
 <body>
+    <nav class="head">
+        <div class="burger" v-on:click="slideMenu()">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#service">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+
     <main>
-        <section class="expired">
-            <div class="title-wrap">
-                <h1>It seems that this link has expired</h1>
 
-                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, rem! Nam veniam adipisci obcaecati, cumque nulla illum illo. Repudiandae natus quaerat.</h3>
-                <div class="buttons">
-                    <button>Afrihost.com</button>
-                    <button>ClientZone</button>
-                </div>
+        <section id="home" class="landing">
 
-                <a href="https://www.afrihost.com" class="logo-wrap">
-                    <div class="circle"></div>
-                    <div class="circle-dark">
-                        <img class="logo" src="img/logo.png" srcset="img/logo@2x.png" alt="">
-                    </div>
-                </a>
-            </div>
+        </section>
 
-            <div class="expired">
-                <div class="wrap-foot">
-                    <h1>Have you tried our other support platforms?</h1>
-                    <div class="footer-box-wrap">
-                        <a href="" class="footer-box">
-                            <img class="icon" src="img/icons/whatsapp.png" srcset="img/icons/whatsapp@2x.png" alt="">
-                            <h3 class="info">whatsapp.afrihost.com</h3>
-                            <h4 class="info">Chat directly via Whatsapp on your mobile or desktop.</h4>
-                        </a>
-                        <a href="" class="footer-box">
-                            <img class="icon help" src="img/icons/help.png" srcset="img/icons/help@2x.png" alt="">
-                            <h3 class="info">help.afrihost.com</h3>
-                            <h4 class="info">Get answers to frequently asked questions.</h4>
-                        </a>
-                        <a href="" class="footer-box">
-                            <img class="icon answers" src="img/icons/answers.png" srcset="img/icons/answers@2x.png" alt="">
-                            <h3 class="info">answers.afrihost.com</h3>
-                            <h4 class="info">Guides, troubleshooting and video tutorials</h4>
-                        </a>
-                    </div>
-                    <p>Copyright &copy; Afrihost 2020</p>
-                </div>
-            </div>
+        <section id="about" class="about">
+
+        </section>
+
+        <section id="service" class="services">
+
+        </section>
+
+        <section id="contact" class="contact">
+
         </section>
     </main>
+
+    <script src="js/index.js"></script>
 </body>
 
 </html>
